--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,7 +20,10 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson'
     implementation 'org.glassfish.jersey.media:jersey-media-multipart'
 
+    // https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4
+    //implementation 'com.microsoft.sqlserver:sqljdbc4:4.0'
     implementation 'com.microsoft.sqlserver:mssql-jdbc:9.2.0.jre11'
+
     // CORS
     implementation 'io.helidon.microprofile:helidon-microprofile-cors:2.2.2'
 }
