--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -2,3 +2,7 @@
 server.port=8099
 server.host=0.0.0.0
 cors.paths.0.allow-origins = *
+
+
+javax.sql.DataSource.demoDS.dataSourceClassName=com.microsoft.sqlserver.jdbc.SQLServerConnectionPoolDataSource
+javax.sql.DataSource.demoDS.dataSource.url = jdbc:sqlserver://127.0.0.1;databaseName=MicroSerDB;user=sa;password=runerune
